--- a/css/webpage.css
+++ b/css/webpage.css
@@ -46,28 +46,26 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-// css reset end
+
 
 *{
     box-sizing:border-box}
 body{
     background:#f3f3f3;
 }
-  p{
-    color: #333;
+p{
+    color: #1a8e3f;
     line-height: 1.5;
-  }
-  .clearfix{
+ }
+ .clearfix{
       clear:both;
-  }
+ }
   
-  $lead-color:#7a4c18;
-  $font-m:16px;
-  $font-l: $font-m * 1.5;
-  $navbar-color:#ffc078;
+  
+ 
   
   .navbar{
-      background-color: #333;
+      background-color: #1a8e3f;
       height: 50px;
   }
   .container{
@@ -79,7 +77,7 @@ body{
   .logo{
       display:inline;
       a{
-          color:$navbar-color;
+          color:#ffc078;
           margin-top: 1em;
           margin-bottom: 1em;
           text-decoration: none;
@@ -87,7 +85,7 @@ body{
           font-size: 24px;
       }
       .fa-music{
-          color:$navbar-color;
+          color:#ffc078;
           margin-right: 1em;
          }
   
@@ -97,17 +95,17 @@ body{
       li{
           float:left;
       }
-          a{
+      a{
           display:flex;
           margin-right: 10px;
-          color:$navbar-color;
+          color:#ffc078;
           text-decoration: none;
           line-height:50px;
           padding: 0 1em;
       }
       a:hover{
-          background-color:  $navbar-color;
-          color:#333
+          background-color:  #ffc078;
+          color:#1a8e3f;
       }
   }
   
@@ -145,7 +143,7 @@ body{
         
         h2{
             font-size:24px;
-            color: $lead-color;
+            color: #78c29c;
             margin-bottom: 1em;
             font-weight: bold;
             text-align: center;
@@ -167,14 +165,14 @@ body{
           color: blue;
         }
         .line{
-            border-bottom:1px solid #333;
+            border-bottom:1px solid #1a8e3f;
             margin:1em 0;
 }      
     }
 h3{
-    font-size: $font-l;
+    font-size: 24px;
     padding:1em 0;
-    color: $lead-color;
+    color: #78c29c;
     margin-top:20px;
     font-weight:bold;
     text-align:center;
@@ -191,42 +189,33 @@ h3{
         line-height:1.3;
         text-align:center;
     }
-    // li 的統一設定所有的文字內容都 padding 向內推擠，因為需要並排，所以要使用 float:left，這邊用一個小技巧，因為要規劃成四個併排的表格另外又要有間格，所以 width 照理講要設定成 25%，但因為中間要有間格，將間隔設定成 1%，因為 margin 是設定上下左右都推 1%，所以實際上是推 2%，這邊 width 的就要 25%-2%=23%，才會平均讓四個表格在同一排。
-    // 外框用 border 設定 1px 的線條，solid 實心線，顏色，
-    // 這邊有使用陰影的效果，box-shadow 的排列是 X 軸、Y 軸、模糊值、顏色。
-    // 讓 li 內的文字行高為 1.3 行距，然後都 text-align 置中對齊。
+    
     h4{
-        font-size:$font-l;
+        font-size:24px;
         padding:1em 0;
-        color:$lead-color;
+        color:#78c29c;
     }
     .btn{
         display:block;
         margin:0 auto;
         padding:10px 60px ;
-        color:$lead-color;
-        border: 2px solid $lead-color;
+        color:#78c29c;
+        border: 2px solid #78c29c;
         background-color:#f3f3f3;
         font-size: 18px;
         margin-top:1em;
         text-align:center;
         cursor: pointer;
-        // 為了讓 btn 可以自己一排，所以設定 display: block，
-        // 讓按鈕置中 margin: 0 auto，
-        // padding 的左右部分是邊用 chrome 裡面的 CSS 直接設定到我要的寬度，有點偷懶，因為不知道怎麼算...
-        // 這邊有用一個 cursor:pointer 的小技巧，讓滑鼠油標移到按鈕時，會變成手指的符號
+        
         &:hover{
-            background-color:$lead-color;
+            background-color:#78c29c;
             color:#fff;
             transition:all .3s;
             border-radius: 3px;
-        // 優化按鈕，
-        // 這邊用了一個漸變的效果 transition ，滑鼠點過去會有 0.3 秒的變化，看起來比較有互動性，
-        // 按鈕邊角有設定圓角 3px，
         }
     }
     .line{
-        border-bottom:1px solid #333;
+        border-bottom:1px solid #1a8e3f;
         margin:1em 0;
     }      
 }
@@ -249,12 +238,12 @@ h3{
       margin: 0 auto;
     }
     .input{
-     font-size: $font-m;
+     font-size: 16px;
      margin-bottom: 1em;
      line-height:2;
      .name,{
       width: 100%;
-      font-size: $font-m;
+      font-size: 16px;
      }
      .btn{
       padding: 10px;
@@ -266,39 +255,39 @@ h3{
       float: right;
       &:hover{
         transition:all .3s;
-        background: $lead-color;
-        border:3px solid $lead-color;
+        background: #78c29c;
+        border:3px solid #78c29c;
       }
      }
     }
 }
 
 .footer{
-   background-color: #333;
+   background-color: #1a8e3f;
    height: 100px;
    margin-top: 20px;
-   //因為通常 footer 也跟 navbar 一樣會是固定的尺寸，所以這邊可以大膽的設定高度，為了區隔上方的內容，所以用了 margin-top
+   
   .footer-text{
     float: left;
-    font-size: $font-m;
-    color: $navbar-color;
+    font-size: 16px;
+    color: #78c29c;
     line-height: 100px;
-    //針對 footer-text 的文字做設定，讓它 footer 的左邊
+
   }
   .footer-menu{
     float: right;
     line-height: 100px;
-     //讓 footer 裡面的連結圖示靠右對齊
+    
     li{
       float: left;
       margin-right: 1em;
-      //這邊的 li 的技巧跟上面選單的技巧一樣，就不再贅述
+      
       a{
-        font-size: $font-m;
-        color: $navbar-color;
+        font-size: 16px;
+        color: #78c29c;
         cursor: pointer;
               }
-     //設定 a 連結的內容
+     
     }
   }
 }
